--- a/Tarefa 01/T1-Latex-Files/main.tex
+++ b/Tarefa 01/T1-Latex-Files/main.tex
@@ -6,7 +6,7 @@
 \title{Ética \& Inteligência Artificial}
 
 % Mudar para o nome e RA da dupla
-\author{Aluno 1 \\ Aluno 2 \and RA 1 \\ RA 2}
+\author{Marcelo Fantini \\ Rubens de Castro Pereira \and RA 1 \\ RA 217146 }
 
 \begin{document}
 \maketitle
