--- a/Tarefa 01/T1-Latex-Files/01-definicao.tex
+++ b/Tarefa 01/T1-Latex-Files/01-definicao.tex
@@ -2,8 +2,7 @@
     \item \textbf{Defina Ética em Inteligência Artificial. }
 \end{enumerate}
 
-A ética em Inteligência Artificial (IA) representa um conjunto de valores e princípios que devem ser respeitados por todos os atores envolvidos no ciclo de vida de sistemas de IA com destaque ao respeito, proteção e promoção dos direitos humanos, liberdades fundamentais e dignidade humana, diversidade e inclusão.
-
-Referencia: Recommendation on the Ethics of Artificial Intelligence. 2022. United Nations Educational, Scientific and Cultural Organization (UNESCO), 7, place de Fontenoy, 75352 Paris 07 SP, France.
-
-\cite{chen_fu_lyu}
+A ética em Inteligência Artificial (IA) representa um conjunto de valores e princípios 
+que devem ser respeitados por todos os atores envolvidos no ciclo de vida de sistemas de IA 
+com destaque ao respeito, proteção e promoção dos direitos humanos, liberdades fundamentais e 
+dignidade humana, diversidade e inclusão \cite{unesco_ethics_ai}.
