--- a/Tarefa 01/T1-Latex-Files/egbib.bib
+++ b/Tarefa 01/T1-Latex-Files/egbib.bib
@@ -1,6 +1,14 @@
+@misc{unesco_ethics_ai,
+    Author = {United Nations Educational, Scientific and Cultural Organization (UNESCO)},
+    Title = {Recommendation on the Ethics of Artificial Intelligence},
+    Year = {2022},
+    Address = { 7, place de Fontenoy, 75352 Paris 07 SP, France}
+}
+
 @misc{chen_fu_lyu,
     Author = {Chen Chen and Jie Fu and Lingjuan Lyu},
     Title = {A Pathway Towards Responsible AI Generated Content},
     Year = {2023},
     Eprint = {arXiv:2303.01325},
 }
+
