--- a/Tarefa 01/T1-Latex-Files/02-noticia.tex
+++ b/Tarefa 01/T1-Latex-Files/02-noticia.tex
@@ -2,4 +2,4 @@
     \item \textbf{Apresente uma notícia recente de um problema de Ética em IA.}
 \end{enumerate}
 
-O site de notícias \textit{The Verge} publicou o artigo \textit{Anyone can use this AI generator - that's the risk}. 
+O site de notícias \textit{The Verge} publicou o artigo \textit{Anyone can use this AI generator - that's the risk} \cite{verge_ai_generator}. 
