--- a/Tarefa 01/T1-Latex-Files/egbib.bib
+++ b/Tarefa 01/T1-Latex-Files/egbib.bib
@@ -12,3 +12,10 @@
     Eprint = {arXiv:2303.01325},
 }
 
+@misc{verge_ai_generator,
+    Title = {Anyone can use this AI art generator - that's the risk},
+    Source = {The Verge},
+    Publication_Date = {2022/09/15},
+    Author = {James Vincent},
+    Link = {https://www.theverge.com/2022/9/15/23340673/ai-image-generation-stable-diffusion-explained-ethics-copyright-data}
+}
