--- a/Tarefa 01/T1-Latex-Files/main.tex
+++ b/Tarefa 01/T1-Latex-Files/main.tex
@@ -1,6 +1,8 @@
 \documentclass{article}
 \usepackage[brazilian]{babel}
 \usepackage[letterpaper,top=2cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
+\usepackage{graphicx}
+\usepackage{hyperref}
 
 
 \title{Ética \& Inteligência Artificial}
@@ -12,7 +14,11 @@
 \maketitle
 
 \input{01-definicao}
+
+
 \input{02-noticia}
+
+
 \input{03-paper}
 
 \bibliographystyle{unsrt}
