Mais um parágrafo da notícia.

--- a/Tarefa 01/T1-Latex-Files/02-noticia.tex
+++ b/Tarefa 01/T1-Latex-Files/02-noticia.tex
@@ -18,3 +18,5 @@ A inteligência artificial está longe de ser perfeita. Ela possui problemas par
 
 A empresa OpenAI possui o gerador de imagens \textit{DALL-E}, que possui uma quantidade finita de geração de imagens gratuitas por mês. Após esta quantidade se esgotar é necessário pagar por prompts para gerar novas imagens, criando uma pequena barreira para aqueles que querem gerar imagens. O Google possui um gerador de imagens chamado \textit{Imagen}, mas este não está aberto ao público.
 
+Além desses geradores ganhou notoriedade o método stable diffusion, difundido pela empresa Stability AI. A empresa, chefiada pelo CEO Emad Mostaque, foca no desenvolvimento open source de stable diffusion. Mostaque diz que a iniciativa open source é sobre "colocar o controle nas mãos das pessoas que construirão e estenderão a tecnologia." Entretanto, isso significa colocar \textbf{todas} essas capacidades nas mãos do público, para o bem ou para o mal.
+
