--- a/Tarefa 01/T1-Latex-Files/02-noticia.tex
+++ b/Tarefa 01/T1-Latex-Files/02-noticia.tex
@@ -18,5 +18,7 @@ A inteligência artificial está longe de ser perfeita. Ela possui problemas par
 
 A empresa OpenAI possui o gerador de imagens \textit{DALL-E}, que possui uma quantidade finita de geração de imagens gratuitas por mês. Após esta quantidade se esgotar é necessário pagar por prompts para gerar novas imagens, criando uma pequena barreira para aqueles que querem gerar imagens. O Google possui um gerador de imagens chamado \textit{Imagen}, mas este não está aberto ao público.
 
-Além desses geradores ganhou notoriedade o método stable diffusion, difundido pela empresa Stability AI. A empresa, chefiada pelo CEO Emad Mostaque, foca no desenvolvimento open source de stable diffusion. Mostaque diz que a iniciativa open source é sobre "colocar o controle nas mãos das pessoas que construirão e estenderão a tecnologia." Entretanto, isso significa colocar \textbf{todas} essas capacidades nas mãos do público, para o bem ou para o mal.
+Além desses geradores ganhou notoriedade o método Stable Diffusion, difundido pela empresa Stability AI. A empresa, chefiada pelo CEO Emad Mostaque, foca no desenvolvimento open source de Stable Diffusion. Mostaque diz que a iniciativa open source é sobre "colocar o controle nas mãos das pessoas que construirão e estenderão a tecnologia." Entretanto, isso significa colocar \textbf{todas} essas capacidades nas mãos do público, para o bem ou para o mal.
+
+Um dos problemas do Stable Diffusion é que não existem restrições sobre o tipo de conteúdo que pode ser gerador. Outros geradores, como DALL-E e Imagen, possuem restrições severas nas palavras-chave e conteúdo que podem gerar, enquanto que o Stable Diffusion pode ser utilizado localmente. Uma vez na máquina local de um usuário, não existe como restringir o que é gerado. Isto torna muito mais fácil de gerar conteúdo violento e sexual, incluindo imagens de pessoas reais.
 
