Organizing commits of paper text.

--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -2,8 +2,7 @@
     \item  \textbf{Apresente um artigo científico recente de uma solução para um problema de Ética em IA.}
 \end{enumerate}
 
-Escreva sua resposta aqui!
-O artigo \cite{chen_fu_lyu} tem como propósito tratar dos riscos potenciais e uso indevido de geração de conteúdo 
+O artigo intitulado \textit{A Pathway Towards Responsible AI Generated Content} \cite{chen_fu_lyu} tem como propósito tratar dos riscos potenciais e uso indevido de geração de conteúdo 
 por IA (GCIA), 
 auxiliar na eliminação de obstáculos e promover entregas seguras e éticas de conteúdos gerados por IA. 
 Os tipos de conteúdos podem ser bastante variados podendo ser imagens, textos, áudios e vídeos. 
@@ -59,8 +58,10 @@ mais profunda desses de vieses, toxicidade e desinformação em todo o ciclo de 
 apesar de ser uma tarefa desafiadora.
 
 
-
 Proteção da propriedade intelectual
+
+
+
 
 Discussão 
 
