--- a/Tarefa 01/T1-Latex-Files/egbib.bib
+++ b/Tarefa 01/T1-Latex-Files/egbib.bib
@@ -5,11 +5,13 @@
     Address = {7, place de Fontenoy, 75352 Paris 07 SP, France}
 }
 
-@misc{chen_fu_lyu,
-    Author = {Chen Chen and Jie Fu and Lingjuan Lyu},
-    Title = {A Pathway Towards Responsible AI Generated Content},
-    Year = {2023},
-    Eprint = {arXiv:2303.01325},
+@misc{chen2023pathway,
+      title={A Pathway Towards Responsible AI Generated Content}, 
+      author={Chen Chen and Jie Fu and Lingjuan Lyu},
+      year={2023},
+      eprint={2303.01325},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI}
 }
 
 @misc{verge_ai_generator,
