--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -10,7 +10,7 @@ sociedade \cite{chen2023pathway}.
 Os tipos de conteúdos considerados nesses modelos são bastante variados podendo ser imagens, textos, 
 áudios ou vídeos. A maioria dos geradores de textos tem como base GPT
 (\textit{Generative Pre-trained Transformers}) e suas versões evoluídas GPT-2 e GPT-3. 
-Existe também os geradores de imagens a partir de textos tendo (\textit{text-to-image} 
+Existe também os geradores de imagens a partir de textos tendo (\textit{text-to-image}) 
 como base CLIP e OpenClip. Destaca-se 
 recentemente o DALL-E e DALL-E 2 desenvolvidos pela OpenAI, e o Stable Diffusion desenvoldido pela 
 Stability DI.
@@ -32,7 +32,7 @@ e outras limitações inerentes aos grandes modelos de linguagens.
 
 Para que os modelos de GCIA sejam considerados responsáveis, estes devem ter o seguinte escopo: 
 privacidade, viés (tendências), toxicidade, desinformação, proteção da propriedade intelectual. 
-Adicionalmente, também devem contemplar a capapcidade de serem robusto, possibilitar explicações dos resultados,
+Adicionalmente, também devem contemplar a capacidade de serem robusto, possibilitar explicações dos resultados,
 devem oferecer código fonte aberto, permitir que os autores dos dados deem consentimento para o uso nos modelos, 
 dar publicidade aos créditos autorais dos resultados, oferecer compensação aos proprietários dos dados quando 
 estes são utilizados nos modelos e, por fim, possibilitar um ambiente amigável para o seu uso.
@@ -49,7 +49,7 @@ do treinamento, reproduzindo essas imagens e não criando novas imagens.
 
 As questões de privacidade ainda não possuem solução definitiva, mas ações vem sendo tomadas para minimizar essas consequencias 
 danosas. As companhias tem disponibilizado website para fornecer identificação de imagens já treinadas como a 
-companhia de arte Spawing AI. 
+companhia de arte Spawning AI. 
 Outra ação para evitar a duplicação de dados é o uso de técnicas de deduplicação removendo de forma ampla dados
 duplicados utilizados em treinamento. Nessa linha segue a companhia OpenAI que reconhece as dificuldades para eliminar 
 completamente dados duplicados. 
@@ -68,7 +68,7 @@ pornografia, calúnias racistas e violência. Para minimizar esses problemas, o 
 contudo eles podem introduzir vieses nos dados de treinamento e, em seguida, propagar esses vieses nos modelos.
 
 Para ilustrar modelos que podem produzir resultados tendenciosos, a Figura \ref{fig:images_of_three_engineers} apresenta 
-imagens geradas por meio do comando \textit{prompt} "\textit{Three engineers running on the grassland}" 
+imagens geradas por meio do comando \textit{prompt} ``\textit{Three engineers running on the grassland}'' 
 e o resultado foram indivíduos do sexo masculino, excluindo indivíduos das minorias raciai e
 indicando uma ausencia de diversidade de gênero.
 Outras estratégias para minimizar esses vieses são o emprego de técnicas de pré-treinamento aplicadas aos dados antes do treinamento do 
@@ -91,7 +91,7 @@ apesar de ser uma tarefa desafiadora.
 \begin{wrapfigure}{r}{0.50\textwidth}
   \centering 
   \includegraphics[scale=0.47]{images_generated_with_text_three_engineers.png}
-  \caption{Imagem gerada a partir do texto "Three engineers running on the grassland" by Stable Diffusion v2.1.}
+  \caption{Imagem gerada a partir do texto ``Three engineers running on the grassland``  by Stable Diffusion v2.1.}
   \label{fig:images_of_three_engineers}
 \end{wrapfigure}
 
@@ -109,7 +109,7 @@ e quando o direito à propriedade intelectual é violado. Por isso, a definiçã
 dos modelos de geração de conteúdos por IA ainda permanece obscura e indefinida.
 Alguns exemplos de problemas surgem nos modelos generativos 
 baseados em texto-para-imagem os quais são acusados de infringir os trabalhos de artistas plástico, 
-consequencia do uso de grandes volumes de imagens da internet para o treiamento dos modelos como o Copilot e Stable Diffusion.
+consequencia do uso de grandes volumes de imagens da internet para o treinamento dos modelos como o Copilot e Stable Diffusion.
 
 Algumas estratégias de minimizar a violação da propriedade intelectual permitem que os artistas solicitem a remoção 
 de trabalhos dos datasets que consideram o seu direito violado como a empresa Midjourney. 
