Changes on noticia

--- a/Tarefa 01/T1-Latex-Files/egbib.bib
+++ b/Tarefa 01/T1-Latex-Files/egbib.bib
@@ -15,9 +15,10 @@
 }
 
 @misc{verge_ai_generator,
-    Title = {Anyone can use this AI art generator - that's the risk},
-    Source = {The Verge},
-    Publication_Date = {2022/09/15},
-    Author = {James Vincent},
-    Link = {https://www.theverge.com/2022/9/15/23340673/ai-image-generation-stable-diffusion-explained-ethics-copyright-data}
+    title = {Anyone can use this AI art generator - that's the risk},
+    journal = {The Verge},
+    year = 2022,
+    month = 9,
+    author = {James Vincent},
+    url = {https://www.theverge.com/2022/9/15/23340673/ai-image-generation-stable-diffusion-explained-ethics-copyright-data}
 }
