--- a/Tarefa 01/T1-Latex-Files/main.tex
+++ b/Tarefa 01/T1-Latex-Files/main.tex
@@ -4,11 +4,14 @@
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{wrapfig}
+% \usepackage{cite}
+% \usepackage{biblatex}
+% \addbibresource{egbib.bib}
 
 \title{Ética \& Inteligência Artificial}
 
 % Mudar para o nome e RA da dupla
-\author{Marcelo Fantini \\ Rubens de Castro Pereira \and RA 108341 \\ RA 217146 }
+\author{Marcelo Antunes Soares Fantini \\ Rubens de Castro Pereira \and RA 108341 \\ RA 217146 }
 
 \begin{document}
 \maketitle
