Correção pequenos erros primeiro parágrafo paper

--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -3,17 +3,17 @@
 \end{enumerate}
 
 O artigo \textit{A Pathway Towards Responsible AI Generated Content} tem como propósito apresentar 
-os riscos decorrentes do uso de modelos de geração de conteúdo por Inteligência Artificial (GCIA), 
-principalmente aqueles voltados para a produção de conteúdo artístico,
-discute e apresenta possíveis ações para o uso responsável, seguro e ético desses modelos na 
+os riscos decorrentes do uso de modelos de Geração de Conteúdo por Inteligência Artificial (GCIA), 
+principalmente aqueles voltados para a produção de conteúdo artístico. 
+Ele discute e apresenta possíveis ações para o uso responsável, seguro, e ético desses modelos na 
 sociedade \cite{chen2023pathway}.
-Os tipos de conteúdos considerados nesses modelos são bastante variados podendo ser imagens, textos, 
+Os tipos de conteúdos considerados nesses modelos são bastante variados, podendo ser imagens, textos, 
 áudios ou vídeos. A maioria dos geradores de textos tem como base GPT
 (\textit{Generative Pre-trained Transformers}) e suas versões evoluídas GPT-2 e GPT-3. 
-Existe também os geradores de imagens a partir de textos tendo (\textit{text-to-image}) 
-como base CLIP e OpenClip. Destaca-se 
-recentemente o DALL-E e DALL-E 2 desenvolvidos pela OpenAI, e o Stable Diffusion desenvoldido pela 
-Stability DI.
+Existem também os geradores de imagens a partir de textos (\textit{text-to-image}), tendo  
+como base CLIP e OpenClip. Destacam-se 
+recentemente o DALL-E e DALL-E 2, desenvolvidos pela OpenAI, e o Stable Diffusion, desenvolvido pela 
+Stability AI.
 
 O uso extensivo desses modelos traz preocupações muito relevantes, pois pode afetar a privacidade das pessoas, 
 gerar preconceito, informação tóxica, desinformação, provocar desrespeito à propriedade intelectual e 
