Revisei segundo e terceiro parágrafos do paper

--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -15,20 +15,18 @@ como base CLIP e OpenClip. Destacam-se
 recentemente o DALL-E e DALL-E 2, desenvolvidos pela OpenAI, e o Stable Diffusion, desenvolvido pela 
 Stability AI.
 
-O uso extensivo desses modelos traz preocupações muito relevantes, pois pode afetar a privacidade das pessoas, 
-gerar preconceito, informação tóxica, desinformação, provocar desrespeito à propriedade intelectual e 
-proporcionar potencial uso indevido quer seja pelas empresas ou pelas pessoas. 
+O uso extensivo desses modelos traz preocupações muito relevantes. Podem afetar a privacidade e
+gerar preconceito, informações tóxicas, desinformações, desrespeitar propriedade intelectual e 
+existem potenciais usos indevidos por empresas ou pessoas. 
 
-Uma questão relevante surgiu recentemente com a disponibilização de novas funcionalidades no ChatGPT, desenvolvido 
-pelo OpenAI, as quais permitem fazer a depuração de código fonte de programas de 
-computador ou elaborar trabalhos escolares/acadêmicos. Dependendo da forma como o produto dessas funcionalidades 
-for utilizado, surgem riscos potenciais, pois os modelos respondem com dados conforme foram treinados, muitas das 
-vezes replicando conteúdos com os quais foram treinados e com sua elavada capacidade de memorização, produzem respostas.
-O conjunto de dados utilizados para treinamento frequentemente tem origem e direitos autorais desconhecidos,
-muitas das vezes não passam por uma análise de curadoria cuidadosa. 
+Recentemente surgiram discussões com a disponibilização de novas funcionalidades do ChatGPT, desenvolvido 
+pelo OpenAI, permitindo depurar códigos fonte de programas de 
+computador ou elaborar trabalhos escolares e acadêmicos. Surgem potenciais riscos com os produtos dessas funcionalidades, 
+pois os modelos respondem conforme foram treinados, replicando conteúdos.
+O conjunto de dados utilizados para treinamento frequentemente sem atribuição de origem e direitos autorais e sem curadoria cuidadosa. 
 Além disso, a maioria dos modelos de GCIA decodificadores de textos são treinados com grandes quantidades 
-de dados obtidos da internet, os quais podem conter desvios e tendencias (bias) relacionados a temas sociais, podem ser tóxicos, 
-e outras limitações inerentes aos grandes modelos de linguagens.
+de dados obtidos da internet. Consequentemente, eles podem conter desvios e viéses (\textit{biases}) relacionados a temas sociais, toxicidade, 
+e outros riscos inerentes aos grandes modelos de linguagens.
 
 Para que os modelos de GCIA sejam considerados responsáveis, estes devem ter o seguinte escopo: 
 privacidade, viés (tendências), toxicidade, desinformação, proteção da propriedade intelectual. 
