Revisei quarto parágrafo paper

--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -28,11 +28,11 @@ Além disso, a maioria dos modelos de GCIA decodificadores de textos são treina
 de dados obtidos da internet. Consequentemente, eles podem conter desvios e viéses (\textit{biases}) relacionados a temas sociais, toxicidade, 
 e outros riscos inerentes aos grandes modelos de linguagens.
 
-Para que os modelos de GCIA sejam considerados responsáveis, estes devem ter o seguinte escopo: 
-privacidade, viés (tendências), toxicidade, desinformação, proteção da propriedade intelectual. 
-Adicionalmente, também devem contemplar a capacidade de serem robusto, possibilitar explicações dos resultados,
-devem oferecer código fonte aberto, permitir que os autores dos dados deem consentimento para o uso nos modelos, 
-dar publicidade aos créditos autorais dos resultados, oferecer compensação aos proprietários dos dados quando 
+Para que os modelos de GCIA sejam considerados responsáveis deve-se incluir nas considerações éticas: 
+privacidade, viéses (tendências), toxicidade, desinformação, e proteção da propriedade intelectual. 
+Adicionalmente, também devem contemplar robustez, possibilitar explicações dos resultados,
+oferecer código fonte aberto, permitir consentimento dos autores para uso nos modelos, 
+respeitar créditos autorais dos resultados, oferecer compensação aos proprietários dos dados quando 
 estes são utilizados nos modelos e, por fim, possibilitar um ambiente amigável para o seu uso.
 
 Considerando o aspecto de privacidade, os modelos generativos de conteúdo permitem uma vulnerabilidade de ataques de privacidade,
